# magpy

./: CONTRIBUTING.md  LICENSE  README.md  check_for_closed_form.py  examples.py  main.py  main_expm.py  main_new_ps.py  main_system_alg.py  main_time_dep.py  new_main.py  pyproject.toml  test.py
.github/workflows/: build.yml
algebra_examples/: ham_op.py  pauli_string.py
comparison/: compare_magpy_to_qutip.py  generate_ref_soln_qutip.py  generate_test_soln_magpy.py  test_system_qutip.py  test_system_torch.py
docs/: batching.ipynb  function_product.ipynb  gpu_computing.ipynb  hamiltonian_operator.ipynb  pauli_string.ipynb  solving_the_lvn_equation.ipynb
evo_examples/: bar.py  foo.py  simple_evolution.py
examples/: multiqubit.py  singlequbit_timedependent.py  test.py
magpy/: __init__.py  _context.py  _device.py  _glq.py  _integrate.py  _registry.py  _splitting.py  _types.py  _utils.py  linalg.py  new_system.py  system.py  system_alg.py  types.py
magpy/core/: __init__.py  function_product.py  hamiltonian_operator.py  linalg.py  pauli_string.py
magpy/solver/: __init__.py  _gl3_quadrature_constants.py  gauss_legendre_quadrature.py  magnus.py  system.py
old examples (ignore)/: batch.py  singlequbit_timedependent.py
requirements/: dev.txt
testing/: time_dependent_interacting.py  time_dependent_multi.py  time_dependent_single.py  time_independent_multi.py  time_independent_single.py
tutorials/: quickstart.ipynb
tutorials/core/: function_product.ipynb  hamiltonian_operator.ipynb  quickstart.ipynb
tutorials/solver/: simulating.ipynb
