[project]
name = "magpy"
version = "1.0.0"
description = "Magnus based time-integration for spins and qubits under a magnetic field."
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Danny Goodacre", email = "danny.goodacre@bath.edu" },
    { name = "Pranav Singh", email = "ps2106@bath.ac.uk" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics"
]
keywords = [
    "quantum", "spin", "Magnus",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
pythonpath = [
    "."
]
